Fix for working better on mobile

--- a/weather-prophet-app/src/styles.css
+++ b/weather-prophet-app/src/styles.css
@@ -1,12 +1,12 @@
 .container-box{
-  width: 300px;
+  width: 100%;
   vertical-align: middle;
   white-space: nowrap;
   position: relative;
 }
 
 .container-box input#search-box{
-  width: 300px;
+  width: 100%;
   height: 50px;
   background: #ffffff;
   border-color: #1b1e21;
